--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,16 @@
 -->
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Paper Kit 2 Angular | Free Bootstrap 4 UI Kit by Creative Tim</title>
-    <base href="/">
 
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <base href="/">
+    <link rel="icon" type="image/png" href="../src/logo.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="../src/logo.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <title>Medicine Agent</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -29,7 +32,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
+
 <body>
     <app-root></app-root>
 </body>
+
+<script src="https://js.stripe.com/v3/"></script>
+
 </html>
